tests/cases/errors/unsupported_type/main.sv
module Top;
  struct { int a; int b; } s;
endmodule
